@@ -1,0 +1,17 @@
+#
+# Display the on and off values off an FS20 device
+# FileLog definition:
+#  define FileLog fs20log fs20dev /var/log/fs20dev-%Y-%U.log 
+#
+set terminal png
+set output '<OUT>.png'
+set xdata time
+set timefmt "%Y-%m-%d_%H:%M:%S"
+set xlabel " "
+set ytics nomirror
+set title '<IN>'
+set grid
+set yrange [-0.2:1.2]
+
+plot "< awk '{print $1, $3==\"on\"? 1 : 0; }' <IN>"\
+        using 1:2 title 'On/Off' with steps
